--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
           <div class="card-body">
             <h5 class="card-title">Hit the button to choose a random card.</h5>
-            <h1 class="card-text"><img src="/img/BeeBackDesign.png"></h1>
+            <h1 class="card-text"><img src="./img/BeeBackDesign.png"></h1>
             <a href="#" class="btn btn-primary">Click to choose!</a>
           </div>
       
